Update Bearer auth security open api doc